--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "my-electron-browser",
-  "version": "0.1.0",
+  "name": "shy-mouse-browser",
+  "version": "1.0.0",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager . my-browser --overwrite --platform=linux --arch=x64 --icon=assets/icon.png --prune=true --out=release-build"
+    "package": "electron-packager . shy-mouse-browser --overwrite --platform=linux --arch=x64 --icon=assets/browser-logo.png --prune=true --out=release-build"
   },
   "devDependencies": {
     "electron": "^29.0.0",
     "electron-packager": "^17.1.2"
+  },
+  "dependencies": {
+    "@cliqz/adblocker-electron": "^1.34.0",
+    "cross-fetch": "^4.1.0"
   }
 }
